<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <!-- Title -->

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_console"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitleLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textShortMessage"
        android:textAllCaps="true"
        android:textColorLink="@color/koreku">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/CompanyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_console"
        android:layout_below="@+id/title"
        android:textAppearance="?android:attr/textAppearanceLarge"></TextView>

    <!-- Company -->

    <EditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CompanyLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/enter_company"
        android:inputType="textShortMessage"
        android:textAllCaps="true"
        android:textColorLink="@color/koreku">

    </EditText>

    <!-- Buy Date -->

    <TextView
        android:id="@+id/time_and_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/buydate_console"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- Image Search -->

    <TextView
        android:id="@+id/image_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_picker_button"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/image"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_and_date"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="12dp"
        android:text="@string/default_date" />
    <!-- Buttons -->

    <Button
        android:id="@+id/date_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="41dp"
        android:layout_marginTop="12dp"
        android:text="@string/date_picker" />

    <Button
        android:id="@+id/image_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_picker"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:text="@string/image_picker" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/submit" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="320dp"
        android:layout_height="172dp"
        android:layout_above="@+id/resetButton"
        android:layout_below="@id/image_picker_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="28dp"
        tools:srcCompat="@tools:sample/avatars" />

</RelativeLayout>